src/snapshots/purs_oxide__parser__tests__type_operator_4.snap
---
source: src/parser.rs
expression: "parse_type(\"a + b + c\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 9,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                Symbol {
                    [salsa id]: 0,
                    text: "a",
                },
            ),
        ),
        [
            (
                QualifiedName {
                    symbol: Symbol {
                        [salsa id]: 1,
                        text: "+",
                    },
                    actually_qualified: false,
                },
                Located(
                    SourceSpan {
                        start: 4,
                        end: 5,
                    },
                    Var(
                        Symbol {
                            [salsa id]: 2,
                            text: "b",
                        },
                    ),
                ),
            ),
            (
                QualifiedName {
                    symbol: Symbol {
                        [salsa id]: 1,
                        text: "+",
                    },
                    actually_qualified: false,
                },
                Located(
                    SourceSpan {
                        start: 8,
                        end: 9,
                    },
                    Var(
                        Symbol {
                            [salsa id]: 3,
                            text: "c",
                        },
                    ),
                ),
            ),
        ],
    ),
)
