src/snapshots/purs_oxide__parser__tests__type_operator_decl.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(\"\n        module Test where\n        infixr 4 type NaturalTransformation as ~>\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 60,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                [salsa id]: 0,
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 59,
                    },
                    Commented(
                        [],
                        Operator {
                            associativity: Right,
                            precedence: 4,
                            name: Type(
                                QualifiedName {
                                    [salsa id]: 0,
                                    module: None,
                                    name: Symbol {
                                        [salsa id]: 0,
                                        text: "NaturalTransformation",
                                    },
                                },
                            ),
                            operator: Symbol {
                                [salsa id]: 1,
                                text: "~>",
                            },
                        },
                    ),
                ),
            ],
        },
    ),
)
