src/snapshots/purs_oxide__parser__tests__type_synonym.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            type Foo = Int\n            type Bar a = a\n            type Baz a b = a\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 65,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName {
                symbol: Symbol {
                    [salsa id]: 0,
                    text: "Test",
                },
                actually_qualified: false,
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 32,
                    },
                    Commented(
                        [],
                        TypeSynonym {
                            name: Symbol {
                                [salsa id]: 1,
                                text: "Foo",
                            },
                            params: [],
                            body: Located(
                                SourceSpan {
                                    start: 29,
                                    end: 32,
                                },
                                TypeConstructor(
                                    QualifiedName {
                                        symbol: Symbol {
                                            [salsa id]: 2,
                                            text: "Int",
                                        },
                                        actually_qualified: false,
                                    },
                                ),
                            ),
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 33,
                        end: 47,
                    },
                    Commented(
                        [],
                        TypeSynonym {
                            name: Symbol {
                                [salsa id]: 3,
                                text: "Bar",
                            },
                            params: [
                                (
                                    Symbol {
                                        [salsa id]: 4,
                                        text: "a",
                                    },
                                    None,
                                ),
                            ],
                            body: Located(
                                SourceSpan {
                                    start: 46,
                                    end: 47,
                                },
                                Var(
                                    Symbol {
                                        [salsa id]: 4,
                                        text: "a",
                                    },
                                ),
                            ),
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 48,
                        end: 64,
                    },
                    Commented(
                        [],
                        TypeSynonym {
                            name: Symbol {
                                [salsa id]: 5,
                                text: "Baz",
                            },
                            params: [
                                (
                                    Symbol {
                                        [salsa id]: 4,
                                        text: "a",
                                    },
                                    None,
                                ),
                                (
                                    Symbol {
                                        [salsa id]: 6,
                                        text: "b",
                                    },
                                    None,
                                ),
                            ],
                            body: Located(
                                SourceSpan {
                                    start: 63,
                                    end: 64,
                                },
                                Var(
                                    Symbol {
                                        [salsa id]: 4,
                                        text: "a",
                                    },
                                ),
                            ),
                        },
                    ),
                ),
            ],
        },
    ),
)
