src/snapshots/purs_oxide__parser__tests__typeclass_1.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            class Foo a where\n              foo :: a -> Bool\n              bar :: a\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 66,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName(
                Symbol(
                    "Test",
                ),
            ),
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 66,
                    },
                    Commented(
                        [],
                        Class(
                            TypeClassDeclaration {
                                constraints: [],
                                name: Symbol(
                                    "Foo",
                                ),
                                params: [
                                    (
                                        Symbol(
                                            "a",
                                        ),
                                        None,
                                    ),
                                ],
                                methods: [
                                    TypeDeclarationData {
                                        ident: Symbol(
                                            "foo",
                                        ),
                                        type: Located(
                                            SourceSpan {
                                                start: 45,
                                                end: 54,
                                            },
                                            FunctionType(
                                                Located(
                                                    SourceSpan {
                                                        start: 45,
                                                        end: 46,
                                                    },
                                                    Var(
                                                        Symbol(
                                                            "a",
                                                        ),
                                                    ),
                                                ),
                                                Located(
                                                    SourceSpan {
                                                        start: 50,
                                                        end: 54,
                                                    },
                                                    TypeConstructor(
                                                        QualifiedName(
                                                            Symbol(
                                                                "Bool",
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    },
                                    TypeDeclarationData {
                                        ident: Symbol(
                                            "bar",
                                        ),
                                        type: Located(
                                            SourceSpan {
                                                start: 64,
                                                end: 65,
                                            },
                                            Var(
                                                Symbol(
                                                    "a",
                                                ),
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
