src/snapshots/purs_oxide__parser__tests__typeclass_3.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            class (Bar a, Baz b) <= Foo a where\n              bar :: a\n        \"#))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 65,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 18,
                        end: 65,
                    },
                    Commented(
                        [],
                        Class(
                            TypeClassDeclaration {
                                constraints: [
                                    Located(
                                        SourceSpan {
                                            decl: Module(
                                                ModuleId {
                                                    name: "Test",
                                                },
                                            ),
                                            start: 25,
                                            end: 30,
                                        },
                                        TypeApp(
                                            Located(
                                                SourceSpan {
                                                    decl: Module(
                                                        ModuleId {
                                                            name: "Test",
                                                        },
                                                    ),
                                                    start: 25,
                                                    end: 28,
                                                },
                                                TypeConstructor(
                                                    QualifiedName {
                                                        module: None,
                                                        name: Symbol {
                                                            text: "Bar",
                                                        },
                                                    },
                                                ),
                                            ),
                                            Located(
                                                SourceSpan {
                                                    decl: Module(
                                                        ModuleId {
                                                            name: "Test",
                                                        },
                                                    ),
                                                    start: 29,
                                                    end: 30,
                                                },
                                                Var(
                                                    Symbol {
                                                        text: "a",
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                    Located(
                                        SourceSpan {
                                            decl: Module(
                                                ModuleId {
                                                    name: "Test",
                                                },
                                            ),
                                            start: 32,
                                            end: 37,
                                        },
                                        TypeApp(
                                            Located(
                                                SourceSpan {
                                                    decl: Module(
                                                        ModuleId {
                                                            name: "Test",
                                                        },
                                                    ),
                                                    start: 32,
                                                    end: 35,
                                                },
                                                TypeConstructor(
                                                    QualifiedName {
                                                        module: None,
                                                        name: Symbol {
                                                            text: "Baz",
                                                        },
                                                    },
                                                ),
                                            ),
                                            Located(
                                                SourceSpan {
                                                    decl: Module(
                                                        ModuleId {
                                                            name: "Test",
                                                        },
                                                    ),
                                                    start: 36,
                                                    end: 37,
                                                },
                                                Var(
                                                    Symbol {
                                                        text: "b",
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                name: Symbol {
                                    text: "Foo",
                                },
                                params: [
                                    (
                                        Symbol {
                                            text: "a",
                                        },
                                        None,
                                    ),
                                ],
                                fundeps: [],
                                methods: [
                                    TypeDeclarationData {
                                        ident: Symbol {
                                            text: "bar",
                                        },
                                        r#type: Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 63,
                                                end: 64,
                                            },
                                            Var(
                                                Symbol {
                                                    text: "a",
                                                },
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
