src/snapshots/purs_oxide__parser__tests__typeclass_4.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            class Foo a where\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 36,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName {
                symbol: Symbol(
                    Id {
                        value: 1,
                    },
                ),
                actually_qualified: false,
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 36,
                    },
                    Commented(
                        [],
                        Class(
                            TypeClassDeclaration {
                                constraints: [],
                                name: Symbol(
                                    Id {
                                        value: 2,
                                    },
                                ),
                                params: [
                                    (
                                        Symbol(
                                            Id {
                                                value: 3,
                                            },
                                        ),
                                        None,
                                    ),
                                ],
                                fundeps: [],
                                methods: [],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
