src/snapshots/purs_oxide__parser__tests__typeclass_var_kind.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            class Foo (a :: Symbol)\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 42,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName {
                symbol: Symbol(
                    Id {
                        value: 1,
                    },
                ),
                actually_qualified: false,
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 41,
                    },
                    Commented(
                        [],
                        Class(
                            TypeClassDeclaration {
                                constraints: [],
                                name: Symbol(
                                    Id {
                                        value: 2,
                                    },
                                ),
                                params: [
                                    (
                                        Symbol(
                                            Id {
                                                value: 3,
                                            },
                                        ),
                                        Some(
                                            Located(
                                                SourceSpan {
                                                    start: 34,
                                                    end: 40,
                                                },
                                                TypeConstructor(
                                                    QualifiedName {
                                                        symbol: Symbol(
                                                            Id {
                                                                value: 4,
                                                            },
                                                        ),
                                                        actually_qualified: false,
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                fundeps: [],
                                methods: [],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
