src/snapshots/purs_oxide__parser__tests__typed_expr.snap
---
source: src/parser.rs
expression: "parse_expr(\"foo bar :: Int\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 14,
    },
    Typed(
        Located(
            SourceSpan {
                start: 0,
                end: 7,
            },
            App(
                Located(
                    SourceSpan {
                        start: 0,
                        end: 3,
                    },
                    Var(
                        QualifiedName {
                            symbol: Symbol(
                                Id {
                                    value: 1,
                                },
                            ),
                            actually_qualified: false,
                        },
                    ),
                ),
                [
                    Located(
                        SourceSpan {
                            start: 4,
                            end: 7,
                        },
                        Var(
                            QualifiedName {
                                symbol: Symbol(
                                    Id {
                                        value: 2,
                                    },
                                ),
                                actually_qualified: false,
                            },
                        ),
                    ),
                ],
            ),
        ),
        Located(
            SourceSpan {
                start: 11,
                end: 14,
            },
            TypeConstructor(
                QualifiedName {
                    symbol: Symbol(
                        Id {
                            value: 3,
                        },
                    ),
                    actually_qualified: false,
                },
            ),
        ),
    ),
)
