src/snapshots/purs_oxide__parser__tests__typed_value_decl.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(\"\n        module Foo where\n        x :: Int\n        x = 1\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 32,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                [salsa id]: 0,
                name: "Foo",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 17,
                        end: 25,
                    },
                    Commented(
                        [],
                        TypeSignature(
                            TypeDeclarationData {
                                ident: Symbol {
                                    [salsa id]: 0,
                                    text: "x",
                                },
                                r#type: Located(
                                    SourceSpan {
                                        start: 22,
                                        end: 25,
                                    },
                                    TypeConstructor(
                                        QualifiedName {
                                            [salsa id]: 0,
                                            module: None,
                                            name: Symbol {
                                                [salsa id]: 1,
                                                text: "Int",
                                            },
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 26,
                        end: 31,
                    },
                    Commented(
                        [],
                        ValueDeclaration(
                            ValueDeclaration {
                                ident: Symbol {
                                    [salsa id]: 0,
                                    text: "x",
                                },
                                params: [],
                                expr: Unconditional(
                                    Located(
                                        SourceSpan {
                                            start: 30,
                                            end: 31,
                                        },
                                        Literal(
                                            Integer(
                                                1,
                                            ),
                                        ),
                                    ),
                                ),
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
